# new_gl_painter

./: CMakeLists.txt
CODE/HEADERS/: debug.h  gl_entity.h  indexbuffer.h  mydrawing.h  painter.h  renderer.h  shader.h  vertexarray.h  vertexbuffer.h  vertexbufferlayout.h
CODE/RES/SHADERS/: basic_shader.shader  color_vertex_shader.shader
CODE/SOURCES/: basic.cpp  gl_entity.cpp  indexbuffer.cpp  mydrawing.cpp  painter.cpp  renderer.cpp  shader.cpp  vertexarray.cpp  vertexbuffer.cpp
